Beginners Guide Strings

--- a/locales/English/war3mapSkin.txt
+++ b/locales/English/war3mapSkin.txt
@@ -167,6 +167,127 @@ RESOURCE_UBERTIP_SUPPLY=|cff8080ffTamer Rank|r is inscreased Battling in the Gre
 SCORESCREEN_TAB2=Digimons
 STRENGTH=|cffff7d00Stamina|r
 YOU_HAVE_YOUR_DIGIMON=You already got your digimon!
+START_DIALOGUE_1=Welcome to the Digital World!
+START_DIALOGUE_2=This is the File City! A city full of digimons!
+START_DIALOGUE_3=You can check the F9 for more information.
+START_DIALOGUE_4=Oh! Don't forget to talk to Tentomon, he may guide you at the start of your journey!
+START_DIALOGUE_ALT_1=Welcome to the Digital World!
+START_DIALOGUE_ALT_2=Please choose your partner digimon!
+HAS_LEFT_THE_GAME=%s has left the game!
+THIS_ITEM_BELONGS_TO_OTHER_PLAYER=This item belongs to another player
+DO_YOU_WANNA_DO_BEGINNER_GUIDE=Do you wanna do the beginners guide?
+YES=Yes
+NO=No
+TUTORIAL_COMPLETED_1=Well done!
+TUTORIAL_COMPLETED_2=You are now ready to start your journey.
+TUTORIAL_COMPLETED_3=So you no longer need my help.
+TUTORIAL_COMPLETED_4=Hope you learned everything! and if you like the game don't forget you can donate to the developers and get special auras to get their appreciation! those are just cosmetic but they look pretty cool! ;D
+TUTORIAL_COMPLETED_5=And now, go to explore the Digimon World.
+TUTORIAL_COMPLETED_6=Good luck!
+TUTORIAL_START_1=Oh look, a new adventurer.
+TUTORIAL_START_2=Alright, let's not waste time, follow me.
+TUTORIAL_LEAVE_1=Wait!
+TUTORIAL_LEAVE_2=You don't know all the basics yet!
+TUTORIAL_LEAVE_3=Seriously, you are not ready yet.
+TUTORIAL_LEAVE_4=I see.
+TUTORIAL_LEAVE_5=If you are decided to explore now, I won't stop you.
+TUTORIAL_LEAVE_6=Sadly I can't go further, so good luck in your journey!.
+TUTORIAL_HINT_MAP=This is your map, so you can see the whole world
+TUTORIAL_HINT_TENTOMON=Tentomon want to tell you something important
+TUTORIAL_HINT_RESTAURANT=The restaurant sells delicious and very usefu food, let's go check it
+TUTORIAL_HINT_SHOP=You can buy powerful items in the shop, let's go check it!
+TUTORIAL_HINT_ENEMY=Outside the city are hostile digimons!
+TUTORIAL_HINT_HOSPITAL=In case your digimons are injured, you can go to Centarumon
+TUTORIAL_HINT_TRANSPORT=This is a big world, a lot of digimons to meet, but we still have some at the city to talk to.
+TUTORIAL_HINT_BANK=The bank is a place where you can store items and digimons, let's go see it
+TUTORIAL_HINT_GYM=In the arena you can show your strength, what do you think about a visit there?
+TUTORIAL_HINT_TRAIN=All the digimons have different elements, let's check what you are good against at the Green Gym
+TUTORIAL_HINT_FISH=Have you ever though about fishing?
+TUTORIAL_INTRO_1=Welcome to the File City!
+TUTORIAL_INTRO_2=This is your starting point in the Digital World.
+TUTORIAL_INTRO_3=Big world to explore, isn't it?
+TUTORIAL_INTRO_4=But you can keep track of all of it with the DigiWiki.
+TUTORIAL_INTRO_5=There you can see all the regions you visited in your world map.
+TUTORIAL_INTRO_6=Also you can see all the digimons you captured/battled and items you colected/used.
+TUTORIAL_INTRO_7=Please open the Digiwiki to check it out!
+TUTORIAL_DONT_WANNA_TALK_WITH_TENTOMON=Fine, I see you more interested in other things.
+TUTORIAL_MAP_1=Very good!
+TUTORIAL_MAP_2=We have many places to visit here in the File City!
+TUTORIAL_MAP_3=Bidra Transport, Green Gym, Grey's Arena, Centaur Clinic, Item shop and the Restaurant!
+TUTORIAL_MAP_4=By the way, there are a lot of digimons that could use your help.
+TUTORIAL_MAP_5=Let's start with Tentomon to see what he needs.
+TUTORIAL_DONT_WANNA_TALK_WITH_TENTOMON_1=Hey! Where are you going?
+TUTORIAL_DONT_WANNA_TALK_WITH_TENTOMON_2=Are you gonna take this seriously?
+TUTORIAL_DONT_WANNA_TALK_WITH_TENTOMON_3=Fine... Let's do something else.
+TUTORIAL_QUEST_TENTOMON_1=This digimon gave you a task.
+TUTORIAL_QUEST_TENTOMON_2=In the quest log you can check for more information.
+TUTORIAL_QUEST_1=As you heard, let's talk to other digimons.
+TUTORIAL_QUEST_2=Let's start with the ones around here.
+TUTORIAL_QUEST_3=Oh yeah! Some Digimon may require certain conditions to give you the task!
+TUTORIAL_QUEST_4=Try finishing other digimons tasks or getting more levels, then talk to them again!
+TUTORIAL_QUEST_5=And remember some digimons may require you to return to them to finish the quest.
+TUTORIAL_BACKPACK_1=It seems that you picked a consummable item.
+TUTORIAL_BACKPACK_2=This type of item goes to your backpack.
+TUTORIAL_BACKPACK_3=To use that item open your backpack B hotkey and select the Digimon you want to use it.
+TUTORIAL_BACKPACK_NET_1=The item you picked is a digimon gift.
+TUTORIAL_BACKPACK_NET_2=The digimon gift is used to become friend with a wild rookie digimon
+TUTORIAL_BACKPACK_NET_3=Is easier to become friend when they have lower health, but it's not 100%!
+TUTORIAL_BACKPACK_NET_4=Then you can look for them at the digimon menu.
+TUTORIAL_NET_1=This is a digimon gift.
+TUTORIAL_NET_2=The digimon gift is used to become friend with a wild rookie digimon
+TUTORIAL_NET_3=Is easier to become friend when they have lower health, but it's not 100%!
+TUTORIAL_NET_4=Then you can look for them at the digimon menu.
+TUTORIAL_EQUIPMENT_1=This is an equipment.
+TUTORIAL_EQUIPMENT_2=It increases your stats.
+TUTORIAL_EQUIPMENT_3=But you are limited in how many you can use at a time
+TUTORIAL_EQUIPMENT_4=1 Weapon, 1 Shield, 2 Accessories, 1 Digivice and 1 Crest, that's the way you can use it!
+TUTORIAL_EQUIPMENT_5=At the digimon menu you can see what your digimon is using
+TUTORIAL_SHOP_1=You can find many Merchant digimons selling many useful items!
+TUTORIAL_SHOP_2=Of course you need digibits to buy it.
+TUTORIAL_SHOP_3=In the Item shop you can buy equipment, disks and other useful stuff.
+TUTORIAL_SHOP_4=All those items can be very useful sooner or later!
+TUTORIAL_RESTAURANT_1=You can find many digimons selling services!
+TUTORIAL_RESTAURANT_2=Yes, you need to pay for those services!
+TUTORIAL_RESTAURANT_3=In the restaurant they sell you food or drinks that buffs you for 30 min.
+TUTORIAL_RESTAURANT_4=Very useful! But you can only have one drink and one food at a time.
+TUTORIAL_ENEMY_1=Watch out!
+TUTORIAL_ENEMY_2=An wild digimon!
+TUTORIAL_ENEMY_3=If you feel that you can beat him, go for it.
+TUTORIAL_ENEMY_4=But you could just run away.
+TUTORIAL_ENEMY_5=Don't forget to be aware of your stats!
+TUTORIAL_KILL_1=When you win a battle you will get digibits and experience if he has a similar level as yours
+TUTORIAL_KILL_2=If the level difference is higher then 5 you won't get any experience
+TUTORIAL_DEATH_1=Your digimon fainted.
+TUTORIAL_DEATH_2=Don't worry, Centarumon will take care of him.
+TUTORIAL_HOSPITAL_1=This is the Centaur's Clinic.
+TUTORIAL_HOSPITAL_2=You can come here to recover and heal your fainted digimons.
+TUTORIAL_HOSPITAL_3=And in case all your digimons faint in combat, you will come back here.
+TUTORIAL_TRANSPORT_1=Hey look!
+TUTORIAL_TRANSPORT_2=This is one of the digimons that can transport you around the Digimon World.
+TUTORIAL_TRANSPORT_3=You can buy a ticket to many diferente places.
+TUTORIAL_TRANSPORT_4=But I don't recommend that yet, you are not ready.
+TUTORIAL_RESOURCE_1=In this world you can find special resources.
+TUTORIAL_RESOURCE_2=These can be used to upgrade your equipment.
+TUTORIAL_RESOURCE_3=Once you get an equipment you can use it to improve it.
+TUTORIAL_RESOURCE_4=Attack it to make it drop the materials.
+TUTORIAL_BANK_1=Here is the bank, you can look at the items you stored in the server.
+TUTORIAL_BANK_2=And can transfer or swap digimons to the server as you can only bring 8 with you.
+TUTORIAL_BANK_3=When you see an item you can either use it or send it here.
+TUTORIAL_BANK_4=To send the item here, there is a Store Button
+TUTORIAL_BANK_5=But if you want, you can just sell it to get digibits.
+TUTORIAL_BANK_6=To sell it just use the sell button and select the item
+TUTORIAL_GYM_1=So you decided to enter the Grey Arena.
+TUTORIAL_GYM_2=Here you can fight with the strongest digimons, if you pay of course.
+TUTORIAL_GYM_3=You can also have friendly fights with other Tamers or buy some Prizes with Ogremon.
+TUTORIAL_GYM_4=Higher ranks in the arena, higher prizes! Oh and you also get bonus stats for all digimons with a higher rank!
+TUTORIAL_TRAIN_1=Welcome to the green gym!
+TUTORIAL_TRAIN_2=Maybe you noticed that your digimons have damage type and defense type.
+TUTORIAL_TRAIN_3=Some damage types are better to certain defenses types and worst to others.
+TUTORIAL_TRAIN_4=You can train it with those targets.
+TUTORIAL_FISH_1=There are plenty of fish in the sea.
+TUTORIAL_FISH_2=They can be very useful for you.
+TUTORIAL_FISH_3=If you wanna you can get a fish rod to catch as much as you want.
+TUTORIAL_FISH_4=Of course you need patience to do that.
 
 [Terrain]
 MaxHeight=3712,3712,3712,3712,3712,3712
